# eds_gravity

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
app/: Cargo.toml
app/src/: actions.rs  assets.rs  audio.rs  camera.rs  main.rs  menus.rs  player_spawning.rs
app/src/game/: gravity.rs  gravity_compute.rs  level_0.rs  logic.rs  mod.rs  sound.rs
assets/maps/: level_0.glb
assets/shaders/: gravity_compute.wgsl
